# live_faktencheck

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRODUCTION_WORKFLOW.md  README.md  README_DEPLOYMENT.md  commit_fact_checks.sh  config.py  export_episode.py  index_pdfs.py  listener.py  manage_claim.sh  publish_episode.sh  pyproject.toml  reader.py  start_dev.sh  start_production.sh  stop_production.sh  test_send_data.py
.github/workflows/: ci.yml  deploy.yml
.ipynb_checkpoints/: deepseek_ollama-checkpoint.ipynb  langchain_tutorial-checkpoint.ipynb
backend/: __init__.py  app.py  auth.py  database.py  lang.py  models.py  run.sh  show_config.py  state.py  utils.py
backend/routers/: audio.py  claims.py  config.py  fact_checks.py  pipeline.py  quick_check.py  sessions.py
backend/services/: __init__.py  claim_extraction.py  cost_tracker.py  fact_checker.py  llm_base.py  observability.py  reference_fetcher.py  registry.py  search.py  studio_graph.py  transcription.py  trusted_domains.py  vector_store.py
backend/tests/: conftest.py  test_access_gate.py  test_api_claims.py  test_api_config.py  test_api_fact_checks.py  test_api_sessions.py  test_audio_pipeline.py  test_claim_extraction.py  test_config.py  test_config_sessions.py  test_cost_tracker.py  test_database.py  test_database_sessions.py  test_fact_checker.py  test_live_audio_limits.py  test_llm_base.py  test_models.py  test_observability.py  test_prompts_generalization.py  test_quick_check.py  test_reference_fetcher.py  test_search.py  test_seed_sessions.py  test_session_isolation.py  test_transcription.py  test_utils.py  test_utils_auto_check.py  test_vector_store.py
backend/tests/integration/: test_e2e_pipeline.py
deploy/: cloudflared-config.yml  deploy.sh  factcheck-backend.service
docs/: configuration.md  deployment.md  development-workflow.md  language-adaptation.md  live-workflow.md  llm_pipeline.md
docs/superpowers/: ROADMAP-session-app.md
docs/superpowers/plans/: 2026-06-09-phase4-vps-deployment.md  2026-06-09-session-multitenancy.md  2026-06-10-homepage-ia.md  2026-06-10-pydanticai-agent-rewrite.md  2026-06-10-quick-check.md  (+5 more)
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js  wrangler.jsonc
frontend/public/: 404.html
frontend/src/: App.css  App.jsx  index.css
prompts/: claim_extraction.md  claim_extraction_article.md  claim_extraction_de.md  claim_selection.md  fact_checker.md  fact_checker_de.md  fact_checker_documents.md  fact_checker_documents_de.md  lang.toml  lang_de.toml  self_critique.md  speaker_labels.md  speaker_labels_de.md
prompts/en/: claim_extraction_test.md  fact_checker.md  fact_checker_v2.md  factcheckresponse_alternative.md  future_ideas_international_comparison.md
(+49 files in other folders)
