[project]
name = "fact-check"
version = "2.0.0"
description = "Live fact-checking application for German TV shows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Audio processing
    "pyaudio>=0.2.14",
    "silero-vad>=4.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pynput>=1.8.1",

    # Web framework
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "python-multipart>=0.0.20",
    "requests>=2.31.0",

    # AI Services
    "assemblyai>=0.37.0",
    "google-genai>=1.0.0",
    "tavily-python>=0.5.0",

    # LangChain / LangGraph
    "langchain>=1.2.3",
    "langchain-google-genai>=4.2.0",
    "langchain-tavily>=0.2.16",
    "langgraph>=1.0.6",

    # Utilities
    "python-dotenv>=1.0.0",
]
